# light

./: .gitignore  Cargo.toml  circle_2d.wgsl  city_mesh.wgsl
res/: circle_2d.wgsl  lens.glb  scenes.prism
scripts/: cube.lua  cube_2.lua  decanter.lua  entity_1.lua  player.lua  player_controller.lua  spin.lua  test_camera.lua  test_components.lua  test_lights.lua  test_visibility.lua
scripts/materials/: checker.lua  empty.lua  glass.lua  white.lua
shaders/: pathtraced.wgsl  photon_emission.wgsl  photon_hash.wgsl  quad.wgsl  raster.wgsl  raytraced.wgsl  sphere.wgsl
src/: application.rs  compute_pass.rs  ecs.rs  editor.rs  editor_ui.rs  main.rs  material_editor.rs  mesh.rs  photon_mapper.rs  prism_file.rs  quad_pass.rs  raster_pass.rs  scene.rs  scene_data.rs  tooling.rs  tooling_lua.rs  tooling_persistence.rs
src/application/: add_menu.rs  ecs_sync.rs  editor_surface.rs  frame_render.rs  geometry.rs  gpu_scene.rs  mod.rs  project_io.rs  runtime.rs  types.rs  view_math.rs
src/application/runtime/: camera_motion.rs  camera_state.rs  engine.rs  fps.rs  input.rs  mod.rs  mouse_look.rs  play_mode.rs  resize.rs  stress.rs  sun.rs  world_tick.rs
src/compute_pass/: mod.rs
src/editor/: panels.rs
src/editor/panel_views/: mod.rs  outliner.rs  properties.rs
src/photon_mapper/: mod.rs
src/quad_pass/: mod.rs
src/raster_pass/: mod.rs
src/tooling/: lua.rs  materials.rs  persistence.rs
src/window/: mod.rs
test/: Cargo.toml
test/src/: main.rs
