[package]
name = "wgpu29_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
glam = "0.24"
gltf = "1.4"
egui = "0.34.2"
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
pollster = "0.4"
transform-gizmo = "0.8"
wgpu = "29.0"
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
slotmap = { version = "1.0", features = ["serde"] }
petgraph = { version = "0.6", features = ["serde-1"] }
zstd = "0.13"
egui_node_editor = "0.10.0"
